src/globals.css
/* Vue transitions */
.slide-fade-enter-active, .slide-fade-leave-active {
  transition: opacity .3s cubic-bezier(0,.65,.35,1), transform .3s cubic-bezier(0,.65,.35,1);
}
.slide-fade-enter-from, .slide-fade-leave-to {
  opacity: 0;
  transform: translateY(16px);
}

.page-enter-active {
  transition: opacity .3s cubic-bezier(0,.65,.35,1), transform .3s cubic-bezier(0,.65,.35,1);
}
.page-enter-from, .page-leave-to {
  opacity: 0;
}
.page-enter-from {
  transform: translateX(32px);
}

/* Animations */
.animate-progress-bar {
  animation-name: progress-bar;
  animation-duration: 750ms;
  animation-iteration-count: infinite;
  animation-timing-function: ease-in-out;
  /*
   * Add an animation delay so that cached routes
   * will not trigger this animation
   */
  animation-delay: 100ms;
}

/* Keyframes */
@keyframes progress-bar {
  from {
    transform: translateX(-100%);
    /* Override initial opacity value */
    opacity: 1;
  }
  to {
    transform: translateX(100%);
    /* Override initial opacity value */
    opacity: 1;
  }
}

